# learn-opengl

./: README.md  flake.nix  meson.build
nix/: default.nix  overlays.nix  shell.nix
resources/: bundle.py  meson.build
resources/shaders/: circle.vert  meson.build  texture.frag  texture.vert  two_triangles_second.frag
resources/shaders/shader_triangle/: color_edge.frag  color_edge.vert  meson.build  time.frag
resources/textures/: README.md  meson.build
src/: files.h  main.c  meson.build  prog.c  prog.h  progs.h  render.c  render.h  shader.c  shader.h  texture.c  texture.h  utils.c  utils.h  vao.c  vao.h
src/progs/: .template.c  circle.c  meson.build  shader_triangle.c  shader_triangle.h  square.c  texture.c  texture.h  triangle.c  two_triangles.c  two_triangles.h
src/render/: meson.build  square.c  square.h  triangle.c  triangle.h
